--- a/package.json
+++ b/package.json
@@ -2,18 +2,28 @@
   "name": "invoice-generator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.5.0",
+    "better-npm-run": "0.0.7",
     "invoice-ninja": "^0.2.2",
+    "node-env-file": "^0.1.8",
     "node-schedule": "^1.0.0",
     "nodemailer": "^2.2.1",
     "nodemailer-mailgun-transport": "^1.0.1",
     "nodemailer-smtp-transport": "^2.4.1",
+    "webpack": "^1.12.14",
     "xoauth2": "^1.1.0"
+  },
+  "devDependencies": {
+    "babel-preset-stage-0": "^6.5.0",
+    "webpack-node-externals": "^1.0.0"
   }
 }
