--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "better-npm-run": "0.0.7",
+    "gcloud": "^0.28.0",
     "invoice-ninja": "^0.2.2",
     "node-env-file": "^0.1.8",
     "node-schedule": "^1.0.0",
