--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "better-npm-run": "0.0.7",
     "gcloud": "^0.28.0",
     "invoice-ninja": "^0.2.2",
+    "json-loader": "^0.5.4",
     "node-env-file": "^0.1.8",
     "node-schedule": "^1.0.0",
     "nodemailer": "^2.2.1",
